--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
 @import 'base/module';
 @import 'utils/module';
 @import 'common/module';
+@import 'layout/module';
+@import 'component/module';
+@import 'custom/module';
