--- a/src/scss/base/_module.scss
+++ b/src/scss/base/_module.scss
@@ -1,37 +1,36 @@
-//@import '~bootstrap/scss/bootstrap';
 // Configuration
 @import 'creadsVariables';
-@import '../node_modules/bootstrap/scss/functions';
+@import '~/bootstrap/scss/functions';
 @import 'customVariables';
-@import '../node_modules/bootstrap/scss/variables';
-@import '../node_modules/bootstrap/scss/mixins';
-@import '../node_modules/bootstrap/scss/utilities';
+@import '~/bootstrap/scss/variables';
+@import '~/bootstrap/scss/mixins';
+@import '~/bootstrap/scss/utilities';
 
 // Layout & components
-@import '../node_modules/bootstrap/scss/root';
-@import '../node_modules/bootstrap/scss/reboot';
-@import '../node_modules/bootstrap/scss/type';
-@import '../node_modules/bootstrap/scss/containers';
-@import '../node_modules/bootstrap/scss/grid';
-@import '../node_modules/bootstrap/scss/forms';
-@import '../node_modules/bootstrap/scss/buttons';
-@import '../node_modules/bootstrap/scss/transitions';
-@import '../node_modules/bootstrap/scss/dropdown';
-@import '../node_modules/bootstrap/scss/button-group';
-@import '../node_modules/bootstrap/scss/nav';
-@import '../node_modules/bootstrap/scss/navbar';
-@import '../node_modules/bootstrap/scss/card';
-@import '../node_modules/bootstrap/scss/close';
-@import '../node_modules/bootstrap/scss/alert';
-@import '../node_modules/bootstrap/scss/progress';
-@import '../node_modules/bootstrap/scss/list-group';
-@import '../node_modules/bootstrap/scss/modal';
-@import '../node_modules/bootstrap/scss/tooltip';
-@import '../node_modules/bootstrap/scss/spinners';
-@import '../node_modules/bootstrap/scss/offcanvas';
+@import '~/bootstrap/scss/root';
+@import '~/bootstrap/scss/reboot';
+@import '~/bootstrap/scss/type';
+@import '~/bootstrap/scss/containers';
+@import '~/bootstrap/scss/grid';
+@import '~/bootstrap/scss/forms';
+@import '~/bootstrap/scss/buttons';
+@import '~/bootstrap/scss/transitions';
+@import '~/bootstrap/scss/dropdown';
+@import '~/bootstrap/scss/button-group';
+@import '~/bootstrap/scss/nav';
+@import '~/bootstrap/scss/navbar';
+@import '~/bootstrap/scss/card';
+@import '~/bootstrap/scss/close';
+@import '~/bootstrap/scss/alert';
+@import '~/bootstrap/scss/progress';
+@import '~/bootstrap/scss/list-group';
+@import '~/bootstrap/scss/modal';
+@import '~/bootstrap/scss/tooltip';
+@import '~/bootstrap/scss/spinners';
+@import '~/bootstrap/scss/offcanvas';
 
 // Helpers
-@import '../node_modules/bootstrap/scss/helpers';
+@import '~/bootstrap/scss/helpers';
 
 // Utilities
-@import '../node_modules/bootstrap/scss/utilities/api';
+@import '~/bootstrap/scss/utilities/api';
